# socket

./: .gitignore  README.md  readme
socket-client/: CMakeLists.txt  socket-client.cpp
socket-server/: CMakeLists.txt  socket-server  socket-server.cpp
socket-server/mariadb_work/: mariadb_work.cpp  mariadb_work.h
